--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# My Sql
+spring.jpa.hibernate.ddl-auto=nome
+spring.datasource.url=jbdc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.username=root
+spring.datasource.password=
 
+# exibe os comandos sql
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
